syntax = "proto3";

package JccPlatform.V1;

option csharp_namespace = "Jcc.Commons.Platform.Grpc.Availability";

// Common message types
message StayPeriod {
  string check_in = 1;
  string check_out = 2;
}

message Occupancy {
  repeated int32 ages = 1;
}

message Money {
  string currency = 1;
  double amount = 2;
}

message Tax {
  string code = 1;
  Money amount = 2;
  bool included_in_price = 3;
}

message Supplement {
  string code = 1;
  string description = 2;
  Money amount = 3;
}

message CancellationPolicy {
  string from_date = 1;
  Money penalty = 2;
}

message RoomDetail {
  string room_code = 1;
  string room_name = 2;
  string board_code = 3;
  string board_name = 4;
  Occupancy occupancy = 5;
}

message Metadata {
  bool is_last_batch = 1;
  string provider_name = 2;
  int32 results_in_this_batch = 3;
}

// Service for searching available hotels based on provided criteria.
service Availability {
  // Searches for available hotels based on the provided criteria and returns a stream of search results.
  rpc Search (SearchRequest) returns (stream SearchResponse);
}

message SearchRequest {
  string credential_id = 1;
  repeated string hotel_ids = 2;
  StayPeriod stay = 3;
  repeated Occupancy occupancies = 4;
  int32 timeout_milliseconds = 5;
}

message SearchResponse {
  repeated HotelResult hotel_result = 1;
  Metadata metadata = 2;
}

message HotelResult {
  string hotel_id = 1;
  string hotel_name = 2;
  repeated BookingOption options = 3;
}

message BookingOption {
  string option_token = 1;
  Money total_price = 2;
  bool is_refundable = 3;
  repeated CancellationPolicy cancellation_policies = 4;
  repeated Tax taxes = 5;
  repeated Supplement supplements = 6;
  string remarks = 7;
  repeated RoomDetail rooms = 8;
}